- Updated to Java 17 - Updated Jabel to get it to compile again - Removed AccessControlException as that's going to be removed from Java soon - Don't call BufferedImage sub images as those are no long accessible because of tighter security in java