@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Peter Abeles. All Rights Reserved.
+ * Copyright (c) 2022, Peter Abeles. All Rights Reserved.
  *
  * This file is part of BoofCV (http://boofcv.org).
  *
@@ -21,6 +21,7 @@ package boofcv.io.image;
 import boofcv.concurrency.BoofConcurrency;
 import boofcv.io.image.impl.ImplConvertRaster;
 import boofcv.io.image.impl.ImplConvertRaster_MT;
+import boofcv.misc.BoofMiscOps;
 import boofcv.struct.image.*;
 
 import java.awt.image.*;
@@ -37,46 +38,46 @@ import java.lang.reflect.Method;
 @SuppressWarnings({"rawtypes", "unchecked"})
 public class ConvertRaster {
 
-	public static void bufferedToGray(DataBufferUShort buffer , WritableRaster src, GrayI16 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToGray(buffer,src,dst);
+	public static void bufferedToGray( DataBufferUShort buffer, WritableRaster src, GrayI16 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToGray(buffer, src, dst);
 		} else {
-			ImplConvertRaster.bufferedToGray(buffer,src,dst);
+			ImplConvertRaster.bufferedToGray(buffer, src, dst);
 		}
 	}
 
-	public static void bufferedToGray(BufferedImage src, GrayI16 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToGray(src,dst);
+	public static void bufferedToGray( BufferedImage src, GrayI16 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToGray(src, dst);
 		} else {
-			ImplConvertRaster.bufferedToGray(src,dst);
+			ImplConvertRaster.bufferedToGray(src, dst);
 		}
 	}
 
-	public static void bufferedToGray(DataBufferInt buffer, WritableRaster src, GrayF32 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToGray(buffer,src,dst);
+	public static void bufferedToGray( DataBufferInt buffer, WritableRaster src, GrayF32 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToGray(buffer, src, dst);
 		} else {
-			ImplConvertRaster.bufferedToGray(buffer,src,dst);
+			ImplConvertRaster.bufferedToGray(buffer, src, dst);
 		}
 	}
 
 	/**
 	 * A faster convert that works directly with a specific raster
 	 */
-	public static void bufferedToGray(DataBufferByte buffer, WritableRaster src, GrayU8 dst) {
+	public static void bufferedToGray( DataBufferByte buffer, WritableRaster src, GrayU8 dst ) {
 		byte[] srcData = buffer.getData();
 
 
 		int numBands = src.getNumBands();
 
-		int size = dst.getWidth() * dst.getHeight();
+		int size = dst.getWidth()*dst.getHeight();
 
 		int srcStride = stride(src);
 		int srcOffset = getOffset(src);
-		int srcStrideDiff = srcStride-src.getNumDataElements()*dst.width;
+		int srcStrideDiff = srcStride - src.getNumDataElements()*dst.width;
 
-		if(BoofConcurrency.USE_CONCURRENT ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
 			if (numBands == 3) {
 				ImplConvertRaster_MT.from_3BU8_to_U8(srcData, srcStride, srcOffset, dst);
 			} else if (numBands == 1) {
@@ -102,7 +103,7 @@ public class ConvertRaster {
 	/**
 	 * A faster convert that works directly with a specific raster
 	 */
-	public static void bufferedToGray(DataBufferByte buffer, WritableRaster src, GrayF32 dst) {
+	public static void bufferedToGray( DataBufferByte buffer, WritableRaster src, GrayF32 dst ) {
 		byte[] srcData = buffer.getData();
 
 		int numBands = src.getNumBands();
@@ -110,7 +111,7 @@ public class ConvertRaster {
 		int srcStride = stride(src);
 		int srcOffset = getOffset(src);
 
-		if(BoofConcurrency.USE_CONCURRENT ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
 			if (numBands == 3) {
 				ImplConvertRaster_MT.from_3BU8_to_F32(srcData, srcStride, srcOffset, dst);
 			} else if (numBands == 1) {
@@ -133,8 +134,8 @@ public class ConvertRaster {
 		}
 	}
 
-	public static int stride(WritableRaster raster) {
-		while( raster.getWritableParent() != null ) {
+	public static int stride( WritableRaster raster ) {
+		while (raster.getWritableParent() != null) {
 			raster = raster.getWritableParent();
 		}
 		return raster.getWidth()*raster.getNumDataElements();
@@ -143,7 +144,7 @@ public class ConvertRaster {
 	/**
 	 * A faster convert that works directly with a specific raster
 	 */
-	static void bufferedToPlanar_U8(DataBufferByte buffer , WritableRaster src, Planar<GrayU8> dst) {
+	static void bufferedToPlanar_U8( DataBufferByte buffer, WritableRaster src, Planar<GrayU8> dst ) {
 		byte[] srcData = buffer.getData();
 
 		int numBands = src.getNumBands();
@@ -151,7 +152,7 @@ public class ConvertRaster {
 		int srcStride = stride(src);
 		int srcOffset = getOffset(src);
 
-		if(BoofConcurrency.USE_CONCURRENT ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
 			if (numBands == 3) {
 				ImplConvertRaster_MT.from_3BU8_to_PLU8(srcData, srcStride, srcOffset, dst);
 			} else if (numBands == 1) {
@@ -177,7 +178,7 @@ public class ConvertRaster {
 	/**
 	 * A faster convert that works directly with a specific raster
 	 */
-	static void bufferedToPlanar_F32(DataBufferByte buffer, WritableRaster src, Planar<GrayF32> dst) {
+	static void bufferedToPlanar_F32( DataBufferByte buffer, WritableRaster src, Planar<GrayF32> dst ) {
 		byte[] srcData = buffer.getData();
 
 		int numBands = src.getNumBands();
@@ -185,7 +186,7 @@ public class ConvertRaster {
 		int srcStride = stride(src);
 		int srcOffset = getOffset(src);
 
-		if(BoofConcurrency.USE_CONCURRENT ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
 			if (numBands == 3) {
 				ImplConvertRaster_MT.from_3BU8_to_PLF32(srcData, srcStride, srcOffset, dst);
 			} else if (numBands == 1) {
@@ -211,93 +212,81 @@ public class ConvertRaster {
 	/**
 	 * A faster convert that works directly with a specific raster
 	 */
-	public static void planarToBuffered_F32(Planar<GrayF32> src, DataBuffer buffer, BufferedImage dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			try {
-				if (buffer.getDataType() == DataBuffer.TYPE_BYTE && isKnownByteFormat(dst)) {
-					ImplConvertRaster_MT.planarToBuffered_F32(src, (DataBufferByte) buffer, dst.getRaster());
-				} else if (buffer.getDataType() == DataBuffer.TYPE_INT) {
-					ImplConvertRaster_MT.planarToBuffered_F32(src, (DataBufferInt) buffer, dst.getRaster());
-				} else {
-					ImplConvertRaster_MT.planarToBuffered_F32(src, dst);
-				}
-				// hack so that it knows the buffer has been modified
-				dst.setRGB(0, 0, dst.getRGB(0, 0));
-			} catch (java.security.AccessControlException e) {
+	public static void planarToBuffered_F32( Planar<GrayF32> src, DataBuffer buffer, BufferedImage dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			if (buffer.getDataType() == DataBuffer.TYPE_BYTE && isKnownByteFormat(dst)) {
+				ImplConvertRaster_MT.planarToBuffered_F32(src, (DataBufferByte)buffer, dst.getRaster());
+			} else if (buffer.getDataType() == DataBuffer.TYPE_INT) {
+				ImplConvertRaster_MT.planarToBuffered_F32(src, (DataBufferInt)buffer, dst.getRaster());
+			} else {
 				ImplConvertRaster_MT.planarToBuffered_F32(src, dst);
 			}
+			// hack so that it knows the buffer has been modified
+			dst.setRGB(0, 0, dst.getRGB(0, 0));
 		} else {
-			try {
-				if (buffer.getDataType() == DataBuffer.TYPE_BYTE && isKnownByteFormat(dst)) {
-					ImplConvertRaster.planarToBuffered_F32(src, (DataBufferByte) buffer, dst.getRaster());
-				} else if (buffer.getDataType() == DataBuffer.TYPE_INT) {
-					ImplConvertRaster.planarToBuffered_F32(src, (DataBufferInt) buffer, dst.getRaster());
-				} else {
-					ImplConvertRaster.planarToBuffered_F32(src, dst);
-				}
-				// hack so that it knows the buffer has been modified
-				dst.setRGB(0, 0, dst.getRGB(0, 0));
-			} catch (java.security.AccessControlException e) {
+			if (buffer.getDataType() == DataBuffer.TYPE_BYTE && isKnownByteFormat(dst)) {
+				ImplConvertRaster.planarToBuffered_F32(src, (DataBufferByte)buffer, dst.getRaster());
+			} else if (buffer.getDataType() == DataBuffer.TYPE_INT) {
+				ImplConvertRaster.planarToBuffered_F32(src, (DataBufferInt)buffer, dst.getRaster());
+			} else {
 				ImplConvertRaster.planarToBuffered_F32(src, dst);
 			}
+			// hack so that it knows the buffer has been modified
+			dst.setRGB(0, 0, dst.getRGB(0, 0));
 		}
 	}
 
-	public static void interleavedToBuffered(InterleavedU8 src, DataBuffer buffer, BufferedImage dst, boolean orderRgb) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			try {
-				if (buffer.getDataType() == DataBuffer.TYPE_BYTE && isKnownByteFormat(dst)) {
-					ImplConvertRaster_MT.interleavedToBuffered(src, (DataBufferByte) buffer, dst.getRaster());
-					if (orderRgb)
-						ImplConvertRaster_MT.orderBandsBufferedFromRGB((DataBufferByte) buffer, dst.getRaster(), dst.getType());
-				} else if (buffer.getDataType() == DataBuffer.TYPE_INT) {
-					ImplConvertRaster_MT.interleavedToBuffered(src, (DataBufferInt) buffer, dst.getRaster());
-					if (orderRgb)
-						ImplConvertRaster_MT.orderBandsBufferedFromRGB((DataBufferInt) buffer, dst.getRaster(), dst.getType());
-				} else {
-					ImplConvertRaster_MT.interleavedToBuffered(src, dst);
-				}
-				// hack so that it knows the buffer has been modified
-				dst.setRGB(0, 0, dst.getRGB(0, 0));
-			} catch (java.security.AccessControlException e) {
+	public static void interleavedToBuffered( InterleavedU8 src, DataBuffer buffer, BufferedImage dst, boolean orderRgb ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			if (buffer.getDataType() == DataBuffer.TYPE_BYTE && isKnownByteFormat(dst)) {
+				ImplConvertRaster_MT.interleavedToBuffered(src, (DataBufferByte)buffer, dst.getRaster());
+				if (orderRgb)
+					ImplConvertRaster_MT.orderBandsBufferedFromRGB((DataBufferByte)buffer, dst.getRaster(), dst.getType());
+			} else if (buffer.getDataType() == DataBuffer.TYPE_INT) {
+				ImplConvertRaster_MT.interleavedToBuffered(src, (DataBufferInt)buffer, dst.getRaster());
+				if (orderRgb)
+					ImplConvertRaster_MT.orderBandsBufferedFromRGB((DataBufferInt)buffer, dst.getRaster(), dst.getType());
+			} else {
 				ImplConvertRaster_MT.interleavedToBuffered(src, dst);
 			}
+			// hack so that it knows the buffer has been modified
+			dst.setRGB(0, 0, dst.getRGB(0, 0));
 		} else {
-			try {
-				if (buffer.getDataType() == DataBuffer.TYPE_BYTE && isKnownByteFormat(dst)) {
-					ImplConvertRaster.interleavedToBuffered(src, (DataBufferByte) buffer, dst.getRaster());
-					if (orderRgb)
-						ImplConvertRaster.orderBandsBufferedFromRGB((DataBufferByte) buffer, dst.getRaster(), dst.getType());
-				} else if (buffer.getDataType() == DataBuffer.TYPE_INT) {
-					ImplConvertRaster.interleavedToBuffered(src, (DataBufferInt) buffer, dst.getRaster());
-					if (orderRgb)
-						ImplConvertRaster.orderBandsBufferedFromRGB((DataBufferInt) buffer, dst.getRaster(), dst.getType());
-				} else {
-					ImplConvertRaster.interleavedToBuffered(src, dst);
-				}
-				// hack so that it knows the buffer has been modified
-				dst.setRGB(0, 0, dst.getRGB(0, 0));
-			} catch (java.security.AccessControlException e) {
+			if (buffer.getDataType() == DataBuffer.TYPE_BYTE && isKnownByteFormat(dst)) {
+				ImplConvertRaster.interleavedToBuffered(src, (DataBufferByte)buffer, dst.getRaster());
+				if (orderRgb)
+					ImplConvertRaster.orderBandsBufferedFromRGB((DataBufferByte)buffer, dst.getRaster(), dst.getType());
+			} else if (buffer.getDataType() == DataBuffer.TYPE_INT) {
+				ImplConvertRaster.interleavedToBuffered(src, (DataBufferInt)buffer, dst.getRaster());
+				if (orderRgb)
+					ImplConvertRaster.orderBandsBufferedFromRGB((DataBufferInt)buffer, dst.getRaster(), dst.getType());
+			} else {
 				ImplConvertRaster.interleavedToBuffered(src, dst);
 			}
+			// hack so that it knows the buffer has been modified
+			dst.setRGB(0, 0, dst.getRGB(0, 0));
 		}
 	}
 
 	public static int getOffset( WritableRaster raster ) {
-
-		if( raster.getWritableParent() == null )
+		if (raster.getWritableParent() == null)
 			return 0;
 
 		try {
-			Method m = raster.getClass().getMethod("getDataOffset",int.class);
+			Method m = raster.getClass().getMethod("getDataOffset", int.class);
 			int min = Integer.MAX_VALUE;
 			for (int i = 0; i < raster.getNumDataElements(); i++) {
-				min = Math.min(min,(Integer)m.invoke(raster,i));
+				min = Math.min(min, (Integer)m.invoke(raster, i));
 			}
 			return min;
-
 		} catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
-			throw new IllegalArgumentException("BufferedImage subimages are not supported in Java 9 and beyond");
+			if (BoofMiscOps.getJavaVersion() >= 17) {
+				throw new RuntimeException(
+						"Due to JRE encapsulation, low level data structures needed for fast conversion of " +
+								"BufferedImages are no longer accessible. You can work around this by adding the " +
+								"following to your java command: --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED", e);
+			}
+			throw new IllegalArgumentException("BufferedImage subimages are not supported in Java 9 and beyond", e);
 		}
 	}
 
@@ -307,32 +296,31 @@ public class ConvertRaster {
 	 * 3 bands it will be RGB and for 4 bands it will be ARGB.
 	 */
 	public static <T extends ImageGray<T>>
-	void orderBandsIntoRGB(Planar<T> image , BufferedImage input ) {
+	void orderBandsIntoRGB( Planar<T> image, BufferedImage input ) {
 
 		boolean swap = swapBandOrder(input);
 
 		// Output formats are: RGB and RGBA
 
-		if( swap ) {
-			if( image.getNumBands() == 3 ) {
+		if (swap) {
+			if (image.getNumBands() == 3) {
 				int bufferedImageType = input.getType();
-				if( bufferedImageType == BufferedImage.TYPE_3BYTE_BGR ||
-						bufferedImageType == BufferedImage.TYPE_INT_BGR )
-				{
+				if (bufferedImageType == BufferedImage.TYPE_3BYTE_BGR ||
+						bufferedImageType == BufferedImage.TYPE_INT_BGR) {
 					T tmp = image.getBand(0);
 					image.bands[0] = image.getBand(2);
 					image.bands[2] = tmp;
 				}
-			} else if( image.getNumBands() == 4 ) {
-				T[] temp = (T[]) Array.newInstance(image.getBandType(),4);
+			} else if (image.getNumBands() == 4) {
+				T[] temp = (T[])Array.newInstance(image.getBandType(), 4);
 
 				int bufferedImageType = input.getType();
-				if( bufferedImageType == BufferedImage.TYPE_INT_ARGB ) {
+				if (bufferedImageType == BufferedImage.TYPE_INT_ARGB) {
 					temp[0] = image.getBand(1);
 					temp[1] = image.getBand(2);
 					temp[2] = image.getBand(3);
 					temp[3] = image.getBand(0);
-				} else if( bufferedImageType == BufferedImage.TYPE_4BYTE_ABGR ) {
+				} else if (bufferedImageType == BufferedImage.TYPE_4BYTE_ABGR) {
 					temp[0] = image.getBand(3);
 					temp[1] = image.getBand(2);
 					temp[2] = image.getBand(1);
@@ -348,31 +336,31 @@ public class ConvertRaster {
 	}
 
 	public static <T extends ImageGray<T>>
-	void orderBandsBufferedFromRgb(Planar<T> image, BufferedImage input) {
+	void orderBandsBufferedFromRgb( Planar<T> image, BufferedImage input ) {
 
 		boolean swap = swapBandOrder(input);
 
 		// Output formats are: RGB and RGBA
 
-		if( swap ) {
-			if( image.getNumBands() == 3 ) {
+		if (swap) {
+			if (image.getNumBands() == 3) {
 				int bufferedImageType = input.getType();
-				if( bufferedImageType == BufferedImage.TYPE_3BYTE_BGR ||
-						bufferedImageType == BufferedImage.TYPE_INT_BGR ) {
+				if (bufferedImageType == BufferedImage.TYPE_3BYTE_BGR ||
+						bufferedImageType == BufferedImage.TYPE_INT_BGR) {
 					T tmp = image.getBand(0);
 					image.bands[0] = image.getBand(2);
 					image.bands[2] = tmp;
 				}
-			} else if( image.getNumBands() == 4 ) {
-				T[] temp = (T[])Array.newInstance(image.getBandType(),4);
+			} else if (image.getNumBands() == 4) {
+				T[] temp = (T[])Array.newInstance(image.getBandType(), 4);
 
 				int bufferedImageType = input.getType();
-				if( bufferedImageType == BufferedImage.TYPE_INT_ARGB ) {
+				if (bufferedImageType == BufferedImage.TYPE_INT_ARGB) {
 					temp[0] = image.getBand(3);
 					temp[1] = image.getBand(0);
 					temp[2] = image.getBand(1);
 					temp[3] = image.getBand(2);
-				} else if( bufferedImageType == BufferedImage.TYPE_4BYTE_ABGR ) {
+				} else if (bufferedImageType == BufferedImage.TYPE_4BYTE_ABGR) {
 					temp[0] = image.getBand(3);
 					temp[1] = image.getBand(2);
 					temp[2] = image.getBand(1);
@@ -387,51 +375,51 @@ public class ConvertRaster {
 		}
 	}
 
-	public static void bufferedToGray(BufferedImage src, float[] data, int dstStartIndex , int dstStride ) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
+	public static void bufferedToGray( BufferedImage src, float[] data, int dstStartIndex, int dstStride ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
 			ImplConvertRaster_MT.bufferedToGray(src, data, dstStartIndex, dstStride);
 		} else {
 			ImplConvertRaster.bufferedToGray(src, data, dstStartIndex, dstStride);
 		}
 	}
 
-	public static void bufferedToGray(BufferedImage src, byte[] data, int dstStartIndex , int dstStride ) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
+	public static void bufferedToGray( BufferedImage src, byte[] data, int dstStartIndex, int dstStride ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
 			ImplConvertRaster_MT.bufferedToGray(src, data, dstStartIndex, dstStride);
 		} else {
 			ImplConvertRaster.bufferedToGray(src, data, dstStartIndex, dstStride);
 		}
 	}
 
-	public static void bufferedToGray(DataBufferInt buffer, WritableRaster src, GrayU8 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
+	public static void bufferedToGray( DataBufferInt buffer, WritableRaster src, GrayU8 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
 			ImplConvertRaster_MT.bufferedToGray(buffer, src, dst);
 		} else {
 			ImplConvertRaster.bufferedToGray(buffer, src, dst);
 		}
 	}
 
-	public static void orderBandsIntoRGB( ImageInterleaved image , BufferedImage input ) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
+	public static void orderBandsIntoRGB( ImageInterleaved image, BufferedImage input ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
 			if (image instanceof InterleavedU8) {
-				ImplConvertRaster_MT.orderBandsIntoRGB((InterleavedU8) image, input);
+				ImplConvertRaster_MT.orderBandsIntoRGB((InterleavedU8)image, input);
 			} else if (image instanceof InterleavedF32) {
-				ImplConvertRaster_MT.orderBandsIntoRGB((InterleavedF32) image, input);
+				ImplConvertRaster_MT.orderBandsIntoRGB((InterleavedF32)image, input);
 			} else {
 				throw new IllegalArgumentException("Unsupported interleaved type");
 			}
 		} else {
 			if (image instanceof InterleavedU8) {
-				ImplConvertRaster.orderBandsIntoRGB((InterleavedU8) image, input);
+				ImplConvertRaster.orderBandsIntoRGB((InterleavedU8)image, input);
 			} else if (image instanceof InterleavedF32) {
-				ImplConvertRaster.orderBandsIntoRGB((InterleavedF32) image, input);
+				ImplConvertRaster.orderBandsIntoRGB((InterleavedF32)image, input);
 			} else {
 				throw new IllegalArgumentException("Unsupported interleaved type");
 			}
 		}
 	}
 
-	public static boolean swapBandOrder(BufferedImage input) {
+	public static boolean swapBandOrder( BufferedImage input ) {
 		// see if access to the raster is restricted or not
 		int bufferedImageType = input.getType();
 		return bufferedImageType == BufferedImage.TYPE_3BYTE_BGR ||
@@ -440,252 +428,253 @@ public class ConvertRaster {
 				bufferedImageType == BufferedImage.TYPE_4BYTE_ABGR;
 	}
 
-	public static void interleavedToBuffered( InterleavedU8 src, BufferedImage dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.interleavedToBuffered(src,dst);
+	public static void interleavedToBuffered( InterleavedU8 src, BufferedImage dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.interleavedToBuffered(src, dst);
 		} else {
-			ImplConvertRaster.interleavedToBuffered(src,dst);
+			ImplConvertRaster.interleavedToBuffered(src, dst);
 		}
 	}
 
-	public static void orderBandsBufferedFromRGB( DataBufferByte buffer , WritableRaster raster , int type ) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.orderBandsBufferedFromRGB(buffer,raster,type);
+	public static void orderBandsBufferedFromRGB( DataBufferByte buffer, WritableRaster raster, int type ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.orderBandsBufferedFromRGB(buffer, raster, type);
 		} else {
-			ImplConvertRaster.orderBandsBufferedFromRGB(buffer,raster,type);
+			ImplConvertRaster.orderBandsBufferedFromRGB(buffer, raster, type);
 		}
 	}
 
-	public static void orderBandsBufferedFromRGB( DataBufferInt buffer, WritableRaster raster , int type ) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.orderBandsBufferedFromRGB(buffer,raster,type);
+	public static void orderBandsBufferedFromRGB( DataBufferInt buffer, WritableRaster raster, int type ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.orderBandsBufferedFromRGB(buffer, raster, type);
 		} else {
-			ImplConvertRaster.orderBandsBufferedFromRGB(buffer,raster,type);
+			ImplConvertRaster.orderBandsBufferedFromRGB(buffer, raster, type);
 		}
 	}
 
-	public static void interleavedToBuffered(InterleavedU8 src, DataBufferByte buffer , WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.interleavedToBuffered(src,buffer,dst);
+	public static void interleavedToBuffered( InterleavedU8 src, DataBufferByte buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.interleavedToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.interleavedToBuffered(src,buffer,dst);
+			ImplConvertRaster.interleavedToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void interleavedToBuffered(InterleavedU8 src, DataBufferInt buffer, WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.interleavedToBuffered(src,buffer,dst);
+	public static void interleavedToBuffered( InterleavedU8 src, DataBufferInt buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.interleavedToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.interleavedToBuffered(src,buffer,dst);
+			ImplConvertRaster.interleavedToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void interleavedToBuffered(InterleavedF32 src, DataBufferByte buffer , WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.interleavedToBuffered(src,buffer,dst);
+	public static void interleavedToBuffered( InterleavedF32 src, DataBufferByte buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.interleavedToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.interleavedToBuffered(src,buffer,dst);
+			ImplConvertRaster.interleavedToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void interleavedToBuffered(InterleavedF32 src, DataBufferInt buffer, WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.interleavedToBuffered(src,buffer,dst);
+	public static void interleavedToBuffered( InterleavedF32 src, DataBufferInt buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.interleavedToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.interleavedToBuffered(src,buffer,dst);
-		}
-	}
-	public static void interleavedToBuffered( InterleavedF32 src, BufferedImage dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.interleavedToBuffered(src,dst);
-		} else {
-			ImplConvertRaster.interleavedToBuffered(src,dst);
+			ImplConvertRaster.interleavedToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void planarToBuffered_U8(Planar<GrayU8> src, DataBufferByte buffer , WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.planarToBuffered_U8(src,buffer,dst);
+	public static void interleavedToBuffered( InterleavedF32 src, BufferedImage dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.interleavedToBuffered(src, dst);
 		} else {
-			ImplConvertRaster.planarToBuffered_U8(src,buffer,dst);
+			ImplConvertRaster.interleavedToBuffered(src, dst);
 		}
 	}
 
-	public static void planarToBuffered_U8(Planar<GrayU8> src, DataBufferInt buffer, WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.planarToBuffered_U8(src,buffer,dst);
+	public static void planarToBuffered_U8( Planar<GrayU8> src, DataBufferByte buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.planarToBuffered_U8(src, buffer, dst);
 		} else {
-			ImplConvertRaster.planarToBuffered_U8(src,buffer,dst);
+			ImplConvertRaster.planarToBuffered_U8(src, buffer, dst);
 		}
 	}
 
-	public static void planarToBuffered_U8(Planar<GrayU8> src, BufferedImage dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.planarToBuffered_U8(src,dst);
+	public static void planarToBuffered_U8( Planar<GrayU8> src, DataBufferInt buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.planarToBuffered_U8(src, buffer, dst);
 		} else {
-			ImplConvertRaster.planarToBuffered_U8(src,dst);
+			ImplConvertRaster.planarToBuffered_U8(src, buffer, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayF32 src, DataBufferByte buffer , WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,buffer,dst);
+	public static void planarToBuffered_U8( Planar<GrayU8> src, BufferedImage dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.planarToBuffered_U8(src, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,buffer,dst);
+			ImplConvertRaster.planarToBuffered_U8(src, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayF32 src, DataBufferInt buffer, WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,buffer,dst);
+	public static void grayToBuffered( GrayF32 src, DataBufferByte buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,buffer,dst);
+			ImplConvertRaster.grayToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayF32 src, BufferedImage dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,dst);
+	public static void grayToBuffered( GrayF32 src, DataBufferInt buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,dst);
+			ImplConvertRaster.grayToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void bufferedToPlanar_U8(DataBufferInt buffer, WritableRaster src, Planar<GrayU8> dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToPlanar_U8(buffer,src,dst);
+	public static void grayToBuffered( GrayF32 src, BufferedImage dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, dst);
 		} else {
-			ImplConvertRaster.bufferedToPlanar_U8(buffer,src,dst);
+			ImplConvertRaster.grayToBuffered(src, dst);
 		}
 	}
 
-	public static void bufferedToPlanar_U8(BufferedImage src, Planar<GrayU8> dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToPlanar_U8(src,dst);
+	public static void bufferedToPlanar_U8( DataBufferInt buffer, WritableRaster src, Planar<GrayU8> dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToPlanar_U8(buffer, src, dst);
 		} else {
-			ImplConvertRaster.bufferedToPlanar_U8(src,dst);
+			ImplConvertRaster.bufferedToPlanar_U8(buffer, src, dst);
 		}
 	}
 
-	public static void bufferedToPlanar_F32(DataBufferInt buffer, WritableRaster src, Planar<GrayF32> dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToPlanar_F32(buffer,src,dst);
+	public static void bufferedToPlanar_U8( BufferedImage src, Planar<GrayU8> dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToPlanar_U8(src, dst);
 		} else {
-			ImplConvertRaster.bufferedToPlanar_F32(buffer,src,dst);
+			ImplConvertRaster.bufferedToPlanar_U8(src, dst);
 		}
 	}
 
-	public static void bufferedToPlanar_F32(BufferedImage src, Planar<GrayF32> dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToPlanar_F32(src,dst);
+	public static void bufferedToPlanar_F32( DataBufferInt buffer, WritableRaster src, Planar<GrayF32> dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToPlanar_F32(buffer, src, dst);
 		} else {
-			ImplConvertRaster.bufferedToPlanar_F32(src,dst);
+			ImplConvertRaster.bufferedToPlanar_F32(buffer, src, dst);
 		}
 	}
 
-	public static void bufferedToInterleaved(DataBufferByte buffer, WritableRaster src, InterleavedU8 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToInterleaved(buffer,src,dst);
+	public static void bufferedToPlanar_F32( BufferedImage src, Planar<GrayF32> dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToPlanar_F32(src, dst);
 		} else {
-			ImplConvertRaster.bufferedToInterleaved(buffer,src,dst);
+			ImplConvertRaster.bufferedToPlanar_F32(src, dst);
 		}
 	}
 
-	public static void bufferedToInterleaved(BufferedImage src, InterleavedU8 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToInterleaved(src,dst);
+	public static void bufferedToInterleaved( DataBufferByte buffer, WritableRaster src, InterleavedU8 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToInterleaved(buffer, src, dst);
 		} else {
-			ImplConvertRaster.bufferedToInterleaved(src,dst);
+			ImplConvertRaster.bufferedToInterleaved(buffer, src, dst);
 		}
 	}
 
-	public static void bufferedToInterleaved(DataBufferInt buffer, WritableRaster src, InterleavedU8 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToInterleaved(buffer,src,dst);
+	public static void bufferedToInterleaved( BufferedImage src, InterleavedU8 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToInterleaved(src, dst);
 		} else {
-			ImplConvertRaster.bufferedToInterleaved(buffer,src,dst);
+			ImplConvertRaster.bufferedToInterleaved(src, dst);
 		}
 	}
 
-	public static void bufferedToInterleaved(DataBufferByte buffer, WritableRaster src, InterleavedF32 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToInterleaved(buffer,src,dst);
+	public static void bufferedToInterleaved( DataBufferInt buffer, WritableRaster src, InterleavedU8 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToInterleaved(buffer, src, dst);
 		} else {
-			ImplConvertRaster.bufferedToInterleaved(buffer,src,dst);
+			ImplConvertRaster.bufferedToInterleaved(buffer, src, dst);
 		}
 	}
 
-	public static void bufferedToInterleaved(BufferedImage src, InterleavedF32 dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToInterleaved(src,dst);
+	public static void bufferedToInterleaved( DataBufferByte buffer, WritableRaster src, InterleavedF32 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToInterleaved(buffer, src, dst);
 		} else {
-			ImplConvertRaster.bufferedToInterleaved(src,dst);
+			ImplConvertRaster.bufferedToInterleaved(buffer, src, dst);
 		}
 	}
 
-	public static void bufferedToInterleaved(DataBufferInt buffer, WritableRaster src, InterleavedF32 dst ) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.bufferedToInterleaved(buffer,src,dst);
+	public static void bufferedToInterleaved( BufferedImage src, InterleavedF32 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToInterleaved(src, dst);
 		} else {
-			ImplConvertRaster.bufferedToInterleaved(buffer,src,dst);
+			ImplConvertRaster.bufferedToInterleaved(src, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayU8 src, DataBufferByte buffer , WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,buffer,dst);
+	public static void bufferedToInterleaved( DataBufferInt buffer, WritableRaster src, InterleavedF32 dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.bufferedToInterleaved(buffer, src, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,buffer,dst);
+			ImplConvertRaster.bufferedToInterleaved(buffer, src, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayU8 src, DataBufferInt buffer, WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,buffer,dst);
+	public static void grayToBuffered( GrayU8 src, DataBufferByte buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,buffer,dst);
+			ImplConvertRaster.grayToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayU8 src, BufferedImage dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,dst);
+	public static void grayToBuffered( GrayU8 src, DataBufferInt buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,dst);
-		}
-	}
-	public static void grayToBuffered(GrayI16 src, DataBufferByte buffer , WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,buffer,dst);
-		} else {
-			ImplConvertRaster.grayToBuffered(src,buffer,dst);
+			ImplConvertRaster.grayToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayI16 src, DataBufferUShort buffer , WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,buffer,dst);
+	public static void grayToBuffered( GrayU8 src, BufferedImage dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,buffer,dst);
+			ImplConvertRaster.grayToBuffered(src, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayI16 src, DataBufferInt buffer, WritableRaster dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,buffer,dst);
+	public static void grayToBuffered( GrayI16 src, DataBufferByte buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,buffer,dst);
+			ImplConvertRaster.grayToBuffered(src, buffer, dst);
 		}
 	}
 
-	public static void grayToBuffered(GrayI16 src, BufferedImage dst) {
-		if(BoofConcurrency.USE_CONCURRENT ) {
-			ImplConvertRaster_MT.grayToBuffered(src,dst);
+	public static void grayToBuffered( GrayI16 src, DataBufferUShort buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, buffer, dst);
 		} else {
-			ImplConvertRaster.grayToBuffered(src,dst);
+			ImplConvertRaster.grayToBuffered(src, buffer, dst);
 		}
 	}
 
+	public static void grayToBuffered( GrayI16 src, DataBufferInt buffer, WritableRaster dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, buffer, dst);
+		} else {
+			ImplConvertRaster.grayToBuffered(src, buffer, dst);
+		}
+	}
+
+	public static void grayToBuffered( GrayI16 src, BufferedImage dst ) {
+		if (BoofConcurrency.USE_CONCURRENT) {
+			ImplConvertRaster_MT.grayToBuffered(src, dst);
+		} else {
+			ImplConvertRaster.grayToBuffered(src, dst);
+		}
+	}
 
 	/**
 	 * Checks to see if it is a known byte format
